image overlapping fix

--- a/css/simple-grid.css
+++ b/css/simple-grid.css
@@ -250,7 +250,7 @@ p {
   }
 }
 
-/* BACK GROUND IMAGE */
+/* IMAGE/BACKGROUND IMAGE */
 
 .bg-image {
   background-image: url('images/TableMountain.jpg');
@@ -262,6 +262,20 @@ p {
   justify-content: center; 
   align-items: center;
 }
+
+.image-container {
+  position: relative; /* or absolute or fixed */
+  width: 100%;
+  height: auto;
+}
+
+.image-container img {
+  width: 100%;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
+}
+
 
 /* COLORS */
 
